--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/movie?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Admin@6335
+
+DB_USER=root
+DB_PWD=Admin@6335
+DB_HOST=host.docker.internal:3306
+
+#DB_HOST=localhost:3306
+
+spring.datasource.url=jdbc:mysql://${DB_HOST}/movies?serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
